Fix for MST-169.